Revert virtual pools